--- a/src/style/Header.module.css
+++ b/src/style/Header.module.css
@@ -3,7 +3,8 @@
     background: black;
     height: 10vh;
     color: white;
-    padding: 30px;
+    padding-left: 30px;
+    padding-right: 30px;
     justify-content: space-between;
     align-items: center;
 }
