--- a/src/style/SearchBar.module.css
+++ b/src/style/SearchBar.module.css
@@ -12,9 +12,15 @@ input {
     padding-left: 5px;
     height: 50px;
     font-size: 1rem;
+    width: 95%
 }
 h2 {
     color: #FF0076;
     margin-bottom: 20px;
+}
+
+p{
+    padding-left: 30px;
+    padding-right: 30px; 
 }
 
